--- a/public/index.html
+++ b/public/index.html
@@ -302,7 +302,7 @@
 
       <script src="/socket.io/socket.io.js"></script>
       <script src="/js/mainSocket.js"></script>
-      <!-- <script src="/js/auth.js"></script> -->
+      <script src="/js/auth.js"></script>
       <script src="/socket.io/socket.io.js"></script>
       <script src="/js/mainSocket.js"></script>
       <script src="/js/swiper.js"></script>
